--- a/main.css
+++ b/main.css
@@ -4,8 +4,35 @@ body {
   font-family: 'Cormorant', serif;
 }
 
-.container {
+.colors {
+  width: 15%;
+  position: absolute;
+  left:0;
+  height: 100%;
+  padding-left: 8%;
+  padding-top: 16%;
+}
 
+.color1 {
+  width: 10%;
+  height: auto;
+  display: block;
+  background-color: red;
+}
+
+.color2 {
+  width: 50px;
+  height: 50px;
+  background-color: blue;
+}
+
+.color3 {
+  width: 50px;
+  height: 50px;
+  background-color: green;
+}
+
+.container {
   width: 100%;
   height: 100%;
 }
@@ -72,5 +99,6 @@ body {
 
 .feature-img {
   width: 100%;
+  height: auto;
 }
 
