--- a/main.css
+++ b/main.css
@@ -4,32 +4,45 @@ body {
   font-family: 'Cormorant', serif;
 }
 
+#coffee-icon {
+  position: absolute;
+  top: 7vw;
+}
+
+.color-text {
+  font-size: 2vw;
+  position: relative;
+  top: 6vw;
+  left: -2vw;
+  font-size: 2.5vw;
+  color: grey;
+}
+
 .colors {
   width: 15%;
   position: absolute;
   left:0;
   height: 100%;
-  padding-left: 8%;
-  padding-top: 16%;
+  padding-left: 8vw;
+  padding-top: 17vw;
+}
+
+.colors>div {
+  width: 6vw;
+  height: 6vw;
+  margin-bottom: 4vw;
 }
 
 .color1 {
-  width: 10%;
-  height: auto;
-  display: block;
-  background-color: red;
+  background-color: #02b3e4;
 }
 
 .color2 {
-  width: 50px;
-  height: 50px;
-  background-color: blue;
+  background-color: #2d3c49;
 }
 
 .color3 {
-  width: 50px;
-  height: 50px;
-  background-color: green;
+  background-color: #7d97ad;
 }
 
 .container {
