--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,21 @@
 body {
   display: block;
   margin: 8px;
-  font-family: 'Cormorant', serif;
+  font-family: "Cormorant", serif;
 }
 
 #coffee-icon {
   position: absolute;
-  top: 6vw;
+  top: 50px;
   font-size: 8vw;
 }
 
-.color-text {
-  font-size: 2vw;
-  position: relative;
-  top: 6vw;
-  left: -2vw;
-  font-size: 2.5vw;
-  color: grey;
-}
-
 .colors {
-  width: 15%;
+  
   position: absolute;
   left:0;
-  height: 100%;
-  padding-left: 8vw;
-  padding-top: 17vw;
+  padding-left: 80px;
+  padding-top: 80px;
 }
 
 .colors>div {
@@ -44,18 +34,6 @@ body {
 
 .color3 {
   background-color: #7d97ad;
-}
-
-.container {
-  width: 100%;
-  height: 100%;
-}
-
-.main-body {
-  width: 80%;
-  padding-right: 3%;
-  position: absolute;
-  right: 0;
 }
 
 .name {
