--- a/css/main.css
+++ b/css/main.css
@@ -11,18 +11,21 @@ body {
 }
 
 .colors {
-  
-  position: absolute;
   left:0;
   padding-left: 80px;
   padding-top: 80px;
 }
+ @media only screen and (min-width : 992px){
+  .colors {
+    visibility: hidden;
+  }
+}
 
 .colors>div {
-  width: 6vw;
-  height: 6vw;
-  margin-bottom: 4vw;
-}
+  width: 60px;
+  height: 60px;
+/*  margin-bottom: 4vw;
+*/}
 
 .color1 {
   background-color: #02b3e4;
