--- a/css/main.css
+++ b/css/main.css
@@ -1,45 +1,77 @@
 body {
-  display: block;
-  margin: 8px;
   font-family: "Cormorant", serif;
+  width: 100%;
+  height: 100%;
 }
 
 #coffee-icon {
-  position: absolute;
-  top: 50px;
-  font-size: 8vw;
+  position: relative;
+  float: left;
+  font-size: 15vw;
+}
+
+.name {
+  font-size: 10vw;
+  text-align: right;
+  margin-bottom: 0;
+}
+
+.job-title {
+  font-size: 5vw;
+  text-align: right;
+  margin: 0 0 20px 0;
+  font-weight: 300;
 }
 
 .colors {
-  left:0;
-  padding-left: 80px;
-  padding-top: 80px;
+  padding-top: 15px;
+  text-align: center;
+  padding-bottom: 25px;
 }
- @media only screen and (min-width : 992px){
-  .colors {
-    visibility: hidden;
-  }
-}
-
-.colors>div {
-  width: 60px;
-  height: 60px;
-/*  margin-bottom: 4vw;
-*/}
-
 .color1 {
   background-color: #02b3e4;
+  float: left;
 }
 
 .color2 {
   background-color: #2d3c49;
+  display: inline-block;
+  float: none;
+  margin: 0 auto;
 }
 
 .color3 {
   background-color: #7d97ad;
+  float: right;
 }
 
-.name {
+.colors>div {
+/*  position: relative;
+  left:0;*/
+  width: 25vw;  
+  height: 25vw;
+/*  margin-right: 4vw;*/
+}
+ 
+@media (min-width: 768px) {
+  .colors {
+    padding-left: 30px;
+  }
+
+  .colors>div {
+    width: 8vw;
+    height: 8vw;
+    margin-bottom: 3vw;
+    float: left;
+  }
+
+  #coffee-icon {
+    font-size: 10vw;
+    position: relative;
+    left: 0;
+  }
+}
+/*.name {
   font-size: 6vw;
   text-align: right;
   margin-bottom: 0;
@@ -95,5 +127,5 @@ body {
 .feature-img {
   width: 100%;
   height: auto;
-}
+}*/
 
