--- a/css/main.css
+++ b/css/main.css
@@ -4,10 +4,26 @@ body {
   height: 100%;
 }
 
+.feature-header {
+  font-weight: 600;
+  text-align: center;
+  word-break: break-all;
+  font-size:2.5vw;
+}
+
+
+.feature-url {
+  text-align: center;
+  word-break: break-all;
+  font-size: 1.5vw;
+  padding: 0 2vw;
+}
+
 .featured-work {
   color: grey;
   font-weight: 600;
   text-align: center;
+  font-size: 6vw;
 }
 
 .hero-image {
@@ -17,6 +33,7 @@ body {
   position: relative;
   float: left;
   font-size: 15vw;
+  padding-top: 2vw;
 }
 
 .name {
