--- a/css/main.css
+++ b/css/main.css
@@ -13,24 +13,21 @@ body {
   font-weight: 600;
   text-align: center;
   word-break: break-all;
-  font-size:2.5vw;
+  font-size: 8vw;
 }
 
 .feature-url {
   text-align: center;
   word-break: break-all;
-  font-size: 1.5vw;
-  padding: 0 2vw;
+  font-size: 2.5vw;
+  padding: 0 3vw;
 }
 
 .featured-work {
   color: grey;
   font-weight: 600;
   text-align: center;
-  font-size: 6vw;
-}
-
-.hero-image {
+  font-size: 9vw;
 }
 
 #coffee-icon {
@@ -78,16 +75,16 @@ body {
   width: 25vw;  
   height: 25vw;
 }
-
-@media (max-width: 768px){
-  .features>div:last-child {
-    display: inline-block;
-    margin: 0 auto;
-    float: none;
-  }
-}
  
 @media (min-width: 768px) {
+  .feature-header {
+    font-size: 3vw;
+  }
+
+  .feature-url {
+    font-size: 1.5vw;
+  }
+
   .featured-work {
     text-align: left;
     font-size: 4vw;
